Updated design contest info

--- a/app/views/intro/design.html.erb
+++ b/app/views/intro/design.html.erb
@@ -39,16 +39,16 @@
       <p>Perhaps you've noticed, but <a href="http://dominiek.com/">the default theme for a Kakuteru Lifestream really sucks</a>. The power of Kakuteru lies in it's integration with other services and to make activity streams more smart. However, some really cool default themes will help Kakuteru grow. We think that's worth something.</p>
       
       <h2>5% of what?</h2>
-      <p>Right now <%= link_to("Kakuteru.com", 'http://kakuteru.com/') %> is very young and hasn't incorporated yet. Also, it is a part-time endeavor by me - Dominiek ter Heide. However, if things go well, Kakuteru could grow to be something big. 5% ownership for making a theme doesn't sound that bad does it? :] Hopefully, you can combine it with making a theme for your own lifestreamer (<a href="http://jisho.org/words?jap=%E4%B8%80%E7%9F%B3%E4%BA%8C%E9%B3%A5&eng=&dict=edict">issekinichou</a>).</p>
+      <p>Right now <%= link_to("Kakuteru.com", 'http://kakuteru.com/') %> is very young and hasn't incorporated yet. Also, it is a part-time endeavor by me - Dominiek ter Heide. However, if things go well, Kakuteru could grow to be something big. 5% ownership for making a theme doesn't sound that bad does it? :] Hopefully, you can combine it with making a theme for your own lifestreamer (<a href="http://jisho.org/words?jap=%E4%B8%80%E7%9F%B3%E4%BA%8C%E9%B3%A5&eng=&dict=edict">issekinichou</a>). 5% is a loose definition (what about voice, contract etc?), in general we are looking for people that want to improve lifestreaming and would be interested in taking Kakuteru to the next level.</p>
       
-      <h2>The Design</h2>
-      <p>A lot of people have complained about the lack of creativity when it comes to lifestreams. I hope we can change this. Right now Kakuteru is in Closed-beta, so please send an e-mail to <a href="mailto: design@kakuteru.com">design@kakuteru.com</a> with your name to get a special invite to set up your Kakuteru lifestream.</p>
+      <h2>An innovative Lifestream Theme</h2>
+      <p>A lot of people have complained about the lack of creativity when it comes to lifestreams. I hope we can change this together. Please note that this competition is <strong>not about a site-design, but rather a Wordpress-like theme</strong> to a powerful lifestreaming backend. Right now Kakuteru is in Closed-beta, so please send an e-mail to <a href="mailto: design@kakuteru.com">design@kakuteru.com</a> with your name to get a special invite to set up your Kakuteru lifestream.</p>
       
       <h2>Conditions</h2>
       <ul>
-        <li>The design must be implemented fully (CSS, HTML etc.) on a Kakuteru lifestream.</li>
+        <li>The design must be implemented fully (CSS, HTML etc.) on a Kakuteru lifestream (Making it almost like a theme).</li>
         <li>You can submit a maximum of 2 designs.</li>
-        <li>A total of at least 10 serious designs have to be submitted by the community.</li>
+        <li>A total of at least 10 serious designs have to be submitted by the community (serious is a loose definition I know, but please have some trust).</li>
         <li>Designs must be submitted <strong>before Thursday March 12th</strong> to <a href="mailto: design@kakuteru.com">design@kakuteru.com</a></li>
       </ul>
       
